--- a/ACT/css/style.css
+++ b/ACT/css/style.css
@@ -25,7 +25,7 @@
 
 body{
     margin: 0em;
-    font-family: "Jost";
+    font-family: 'Noto Sans', sans-serif;
     font-size: 15px;
     line-height: 1.6;
     background-color: rgb(0, 0, 0);
@@ -49,7 +49,9 @@ header, h1, h2, h3, h4, h5, h6 {
     height: 100vh;    
 }
 /*header*/
-
+header{
+    border-bottom: 3px solid #f39200;
+}
 .header-nav{
     display: flex;
     justify-content: space-between;
@@ -93,10 +95,9 @@ header, h1, h2, h3, h4, h5, h6 {
 	height: 42px;
 	background: #f39200e8;
 	border-radius: 5px;
-    transition: all 0.5s ease;
-    
-   
+    transition: all 0.5s ease; 
 }
+
 .menu__link:hover:before{
     width:100%;
     
@@ -108,16 +109,46 @@ header, h1, h2, h3, h4, h5, h6 {
     text-decoration: none;
     position: relative;
     padding: 10px 5px 10px 5px;
-    font-family: "Jost";
+    font-family: 'Noto Sans';
     font-weight: medium;
-    font-size: 26px;
+    font-size: 24px;
     line-height: 1;
     letter-spacing: 1.5px;
 }
-.menu__link:active{
-    text-decoration: underline 1px solid rgb(245, 241, 241)55, 249, 249);
+.partner__link{
+    margin-left: 50px;
+    color: #f6f6f6;
+    text-decoration: none;
+    position: relative;
+    padding: 10px 5px 10px 5px;
+    font-family: 'Noto Sans';
+    font-weight: medium;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: 1.5px;
+    background-color:#f39200e8;
+    border-radius: 5px;
+    
+
+}
+.partner__link:before{
+    content:'';
+    z-index: -1;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 0;
+	height: 42px;
+	background: #f702ff;
+	border-radius: 5px;
+    transition: all 0.5s ease; 
 }
 
+.partner__link:hover:before{
+    width:100%;
+    
+    
+} 
 
 /*Меню для мобильных*/
 .menu-triger {
@@ -169,7 +200,7 @@ header, h1, h2, h3, h4, h5, h6 {
     text-decoration: none;
     position: relative;
     padding: 14px 0;
-    font-family: "Jost";
+    font-family: "Noto Sans";
     font-weight: medium;
     font-size: 20px;
     line-height: 1;
@@ -194,7 +225,7 @@ header, h1, h2, h3, h4, h5, h6 {
     text-align: center;
     font-size: 30px;
     letter-spacing: 1px;
-    color:#2e68b3;
+    color:#f39200;
     margin:35px auto;
 }
 .content-title:hover{
@@ -205,11 +236,14 @@ header, h1, h2, h3, h4, h5, h6 {
     margin: 50px auto;
     padding: 10px 5%;
 }
+.outsider-article ul li{
+    color:white;
+}
 .outsider-title{
-    font-family: "Jost";
+    font-family: "Noto Sans";
     font-weight: bold;
     color:#f5c014;
-    font-size: 30px;
+    font-size: 26px;
     letter-spacing: 0.8px;
     text-align: left;
     display: block;
@@ -237,7 +271,7 @@ header, h1, h2, h3, h4, h5, h6 {
 /* Slideshow container */
 .slideshow-container {
     background-color: #ffffff;
-    width: 100%;
+    width: 85%;
     max-width: 3000px;
     padding: 20px;
     position: relative;
@@ -288,7 +322,7 @@ header, h1, h2, h3, h4, h5, h6 {
     font-family: "Jost";
     font-weight: normal;
     letter-spacing: 0.8px;
-    background-color: #3c7ccf;
+    background-color: rgba(233, 114, 16, 0.849);
     border: none;
     padding: 10px 55px;
     border-radius: 12px;
@@ -299,6 +333,7 @@ header, h1, h2, h3, h4, h5, h6 {
 
 /*showreal*/
 .video {
+    width: 85%;
     margin: 0px auto;
     max-width: 3000px;
     position: relative;
@@ -306,6 +341,8 @@ header, h1, h2, h3, h4, h5, h6 {
     /*пропорции видео 16:9 */
     padding-top: 0px;
     height: 0px;
+    background-color:#fff;
+    border:3px solid white;
 }
 .mediabox h3{
     color:white;
@@ -430,7 +467,7 @@ footer{
 }
 
 .footer-logo{
-    width:250px;
+    width:170px;
     margin: 5px auto;
     display: block;
 }
