--- a/ACT/css/style.css
+++ b/ACT/css/style.css
@@ -102,7 +102,8 @@ header{
     width:100%;
     
     
-} 
+}
+
 .menu__link {
     margin-left: 50px;
     color: #f6f6f6;
@@ -115,40 +116,7 @@ header{
     line-height: 1;
     letter-spacing: 1.5px;
 }
-.partner__link{
-    margin-left: 50px;
-    color: #f6f6f6;
-    text-decoration: none;
-    position: relative;
-    padding: 10px 5px 10px 5px;
-    font-family: 'Noto Sans';
-    font-weight: medium;
-    font-size: 24px;
-    line-height: 1;
-    letter-spacing: 1.5px;
-    background-color:#f39200e8;
-    border-radius: 5px;
-    
 
-}
-.partner__link:before{
-    content:'';
-    z-index: -1;
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 0;
-	height: 42px;
-	background: #f702ff;
-	border-radius: 5px;
-    transition: all 0.5s ease; 
-}
-
-.partner__link:hover:before{
-    width:100%;
-    
-    
-} 
 
 /*Меню для мобильных*/
 .menu-triger {
@@ -236,8 +204,14 @@ header{
     margin: 50px auto;
     padding: 10px 5%;
 }
-.outsider-article ul li{
+.about_us_list{
     color:white;
+    list-style: none;
+    display: flex;
+}
+.about_us_list li{
+    width:30%;
+    
 }
 .outsider-title{
     font-family: "Noto Sans";
@@ -319,7 +293,7 @@ header{
 .folio-btn button{
     color:white;
     font-size: 17pt;
-    font-family: "Jost";
+    font-family: "Noto Sans";
     font-weight: normal;
     letter-spacing: 0.8px;
     background-color: rgba(233, 114, 16, 0.849);
@@ -460,9 +434,9 @@ footer{
 .footer-title{
     margin-top: 25px;
     text-align: center;
-    font-family: "Jost";
+    font-family: "Noto Sans";
     font-weight: bold;
-    color:#2e68b3;
+    color:#f39200;
     font-size: 22pt;
 }
 
@@ -506,7 +480,7 @@ footer{
     width:250px;
     content: "";
     height: 2px;
-    background-color:#2980B9;
+    background-color:#fff;
 }
 .social-logo-box{
     margin:0px auto;
@@ -585,7 +559,7 @@ footer{
     display: block;
     margin: 5px auto;
     text-align: center;
-    font-family: "Jost";
+    font-family: "Noto Sans";
     font-weight: 300;
     color:#fff;
     font-size: 14pt;
@@ -593,7 +567,7 @@ footer{
 .contacts-2 h3{
     text-align: center;
     color:white;
-
+    font-family: "Noto Sans";
 }
 .succes{
     max-width: 250px;
@@ -640,62 +614,7 @@ footer{
     background-color: #ff4c4c;
 }
 
-/*team-page*/
-.team-page{
-    max-width: 3000px;
-    width:100%;
-    margin:0px auto;
-    background-color: rgba(204, 201, 201, 0.945);
-    padding:10px 19%;
-}
-.out-team-img{
-    max-width: 350px;
-    float:left;
-    margin:30px 15px;
-}
-.out-team-person{
-    padding: 5px 5px;
-    display: inline-block;
-    max-width: 450px;
-    margin:50px 10px;
-}
-.out-team-ph{
-    margin: 0;
-    width:320px;
-    text-align: center;
-}
-.out-team-text{
-    text-align: left;
-    margin:5px 0px;
-    font-size: 15px;
-}
-.movie-list{
-    font-size:19px;
-}
-.name-team-member{
-    font-family: "Jost";
-    font-size: 26px;
-}
-.pr-team-member{
-    font-size: 21px;
-    color:#2e68b3;
-    text-transform: lowercase;
-}
-.year{
-    color:#3c7ccf
-}
 
-figure {
-    display: inline-block;
-    background: #fdfdfd;
-    padding: 10px;
-    margin: 15px 1em 0 0;
-    vertical-align: top; 
-}
-
-figcaption {
-text-align: center;
-}
 .container-cutter{
     margin-top:30px;
 }
